# TeXFrog

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  build_tutorials.sh  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: latex-integration.md  system-design.md  troubleshooting.md  writing-proofs.md
examples/: build_tutorials.sh
examples/example-multiproof/: macros.tex  main.tex
examples/tutorial-cryptocode/: README.md  games_source.tex  macros.tex  main.tex  proof.yaml
examples/tutorial-cryptocode-quickstart/: README.md  main.tex
examples/tutorial-cryptocode/commentary/: G0.tex  G3.tex  Red1.tex
examples/tutorial-nicodemus/: README.md  games_source.tex  macros.tex  main.tex  proof.yaml
examples/tutorial-nicodemus/commentary/: G1.tex  G2.tex
examples/tutorial-pure-latex/: README.md  main.tex
latex/: texfrog.sty
tests/: conftest.py  test_check_cli.py  test_cli_helpers.py  test_deps.py  test_filter.py  test_html_internals.py  test_html_viewer.py  test_init.py  test_integration.py  test_latex_output.py  test_packages.py  test_parser.py  test_sty_compilation.py  test_tex_parser.py  test_validate.py  test_watcher.py
tests/fixtures/nicodemus/: macros.tex  proof.yaml  source.tex
tests/fixtures/nicodemus/commentary/: G0.tex
tests/fixtures/simple/: macros.tex  proof.yaml  source.tex
tests/fixtures/simple/commentary/: G1.tex
texfrog/: cli.py  deps.py  filter.py  model.py  packages.py  parser.py  templates.py  tex_parser.py  validate.py  watcher.py
texfrog/output/: html.py  latex.py
texfrog/output/templates/: app.js  index.html.j2  style.css
tutorial/: README.md  games_source.tex  macros.tex  proof.yaml
tutorial-cryptocode/: README.md  games_source.tex  main.tex  proof.yaml
tutorial-nicodemus/: README.md  games_source.tex  macros.tex  main.tex  proof.yaml
vscode-texfrog/: README.md  package-lock.json  package.json  tsconfig.json
vscode-texfrog/src/: dimming.ts  extension.ts  parser.ts  tagResolver.ts  types.ts
vscode-texfrog/src/test/: dimming.test.ts  parser.test.ts  setup.ts  tagResolver.test.ts
(+1 files in other folders)
