[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "texfrog"
version = "0.0.1"
authors = [
    { name="Douglas Stebila", email="dstebila@uwaterloo.ca" },
]
description = "Tool for organizing and rendering LaTeX cryptographic game-hopping proofs"
keywords = ["cryptography", "latex", "game-hopping", "proofs"]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.0",
    "watchdog>=3.0",
]

[project.urls]
Homepage = "https://texfrog.github.io/"
Repository = "https://github.com/TeXFrog/TeXFrog"
Issues = "https://github.com/TeXFrog/TeXFrog/issues"

[project.scripts]
texfrog = "texfrog.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["texfrog*"]

[tool.setuptools.package-data]
"texfrog.output.templates" = ["*.css", "*.js", "*.j2"]
